--- a/package.json
+++ b/package.json
@@ -1,40 +1,87 @@
 {
-  "name": "amo",
-  "version": "1.0.0",
+  "name": "nestjs-demo",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev:web": "cd client/web && pnpm run dev",
-    "dev:server": "cd server && pnpm run dev",
-    "start:service": "cd server && pnpm run start:dev",
-    "build:web": "cd client && pnpm run build",
-    "build:server": "cd server && pnpm run build",
-    "prepare": "husky install",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "check:type:client": "cd client/web && tsc --noEmit",
-    "check:type:server": "cd server && tsc --noEmit",
-    "preinstall": "npx only-allow pnpm",
-    "lint:fix": "eslint --fix './**/*.{ts,tsx}'"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "commitlint": "^17.0.3",
-    "eslint-plugin-react": "^7.31.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0"
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+     "prebuild": "rimraf dist",
+     "build": "cross-env NODE_ENV=production nest build",
+     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+     "start": "ts-node src/index.ts",
+     "start:dev": "cross-env NODE_ENV=development nest start --watch",
+     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+     "start:prod": "cross-env NODE_ENV=production node dist/src/main",
+     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+     "test": "jest",
+     "test:watch": "jest --watch",
+     "test:cov": "jest --coverage",
+     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+     "test:e2e": "jest --config ./test/jest-e2e.json",
+     "typeorm": "typeorm-ts-node-commonjs -d ormconfig.ts",
+     "migration:generate": "f() { npm run typeorm migration:generate -p \"./src/migrations/$@\"; }; f",
+     "migration:create": "typeorm-ts-node-commonjs migration:create",
+     "migration:run": "npm run typeorm migration:run",
+     "migration:revert": "npm run typeorm migration:revert",
+     "schema:drop": "npm run typeorm schema:drop"
   },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+  "dependencies": {
+     "@nestjs/common": "^9.0.0",
+     "@nestjs/config": "^2.2.0",
+     "@nestjs/core": "^9.0.0",
+     "@nestjs/platform-express": "^9.0.0",
+     "@nestjs/typeorm": "^9.0.1",
+     "dotenv": "^16.0.1",
+     "joi": "^17.6.0",
+     "mysql2": "^2.3.3",
+     "nest-winston": "^1.8.0",
+     "reflect-metadata": "^0.1.13",
+     "rimraf": "^3.0.2",
+     "rxjs": "^7.2.0",
+     "typeorm": "0.3.7",
+     "winston": "^3.8.2",
+     "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+     "@nestjs/cli": "^9.0.0",
+     "@nestjs/schematics": "^9.0.0",
+     "@nestjs/testing": "^9.0.0",
+     "@types/express": "^4.17.13",
+     "@types/jest": "28.1.4",
+     "@types/node": "^16.11.10",
+     "@types/supertest": "^2.0.11",
+     "@typescript-eslint/eslint-plugin": "^5.0.0",
+     "@typescript-eslint/parser": "^5.0.0",
+     "cross-env": "^7.0.3",
+     "eslint": "^8.0.1",
+     "eslint-config-prettier": "^8.3.0",
+     "eslint-plugin-prettier": "^4.0.0",
+     "jest": "28.1.2",
+     "prettier": "^2.3.2",
+     "source-map-support": "^0.5.20",
+     "supertest": "^6.1.3",
+     "ts-jest": "28.0.5",
+     "ts-loader": "^9.2.3",
+     "ts-node": "10.7.0",
+     "tsconfig-paths": "4.0.0",
+     "typescript": "4.5.2"
+  },
+  "jest": {
+     "moduleFileExtensions": [
+        "js",
+        "json",
+        "ts"
+     ],
+     "rootDir": "src",
+     "testRegex": ".*\\.spec\\.ts$",
+     "transform": {
+        "^.+\\.(t|j)s$": "ts-jest"
+     },
+     "collectCoverageFrom": [
+        "**/*.(t|j)s"
+     ],
+     "coverageDirectory": "../coverage",
+     "testEnvironment": "node"
   }
 }
