--- a/server/package.json
+++ b/server/package.json
@@ -21,32 +21,40 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^9.3.9",
     "@nestjs/typeorm": "^9.0.1",
+    "dotenv": "^16.0.3",
+    "joi": "^17.8.3",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.10"
+    "rxjs": "^7.8.0",
+    "transports": "link:winston/lib/winston/transports",
+    "typeorm": "^0.3.12",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.9",
+    "@types/express": "^4.17.17",
     "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
+    "@types/node": "^16.18.12",
+    "@types/supertest": "^2.0.12",
     "jest": "28.1.3",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
     "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
