feat(server): user crud

--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,23 @@ DB_TYPE=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
+DB_USERNAME=root
+DB_DATABASE=amodb
+DB_PASSWORD=123456
+
 DB_SYNC=false
 
 LOG_ON=true
+
+# 打印的日志级别
 LOG_LEVEL=info
+# 是否打印时间戳
+TIMESTAMP=true
+
+APP_PORT=3000
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_RECONNECT=true
