feat(server): user、material

--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mysql2": "^2.3.3",
     "nest-winston": "^1.8.0",
