--- a/cli/packages/utils/package.json
+++ b/cli/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devlink/cli-utils",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "> TODO: description",
   "author": "zhangbaolin <zhangbaolin.work@foxmail.com>",
   "homepage": "https://github.com/developerlinks/devlink#readme",
