chore: 完善实体定义/功能

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: devlink-db
+      MYSQL_ROOT_PASSWORD: bowling
     ports:
       - 3306:3306
 
