--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+packages/*/lib
+
 # compiled output
 /dist
 /node_modules
@@ -35,3 +37,6 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 test.*
+*/.env.development
+*/.env.production
+*/.env
