--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^1.0.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
@@ -39,6 +40,7 @@
     "dotenv": "^16.0.3",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "ioredis": "^5.3.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
@@ -73,6 +75,7 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
   "jest": {
