--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.8",
+    "@antv/g-canvas": "^1.9.40",
+    "@antv/g-lite": "^1.0.50",
+    "@antv/g2": "^4.2.10",
     "@arco-design/arco-site-navbar": "^1.14.0",
     "@arco-design/color": "^0.4.0",
     "@arco-design/web-react": "^2.45.2",
@@ -22,22 +25,29 @@
     "@arco-materials/site-utils": "^1.2.0",
     "@arco-plugins/vite-react": "^1.0.5",
     "@arco-themes/react-arco-pro": "^0.0.7",
+    "@bytemd/plugin-gfm": "^1.20.2",
+    "@bytemd/react": "^1.20.2",
     "@loadable/component": "^5.13.2",
     "@turf/turf": "^6.5.0",
     "animejs": "^3.2.1",
     "axios": "^0.24.0",
     "bizcharts": "^4.1.11",
+    "bytemd": "^1.20.2",
     "canvas-confetti": "^1.6.0",
     "classnames": "^2.3.1",
     "clipboard": "^2.0.11",
     "copy-to-clipboard": "^3.3.1",
     "dayjs": "^1.11.7",
+    "diff": "^5.1.0",
     "icon": "link:@arco-design/web-react/icon",
+    "index.css": "link:bytemd/dist/index.css",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
+    "lodash.shuffle": "^4.2.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "parallax-js": "^3.1.0",
+    "prop-types": "^15.8.1",
     "query-string": "^6.13.8",
     "react": "^17.0.2",
     "react-color": "^2.18.1",
@@ -45,7 +55,9 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "resize-observer-polyfill": "^1.5.1",
+    "vite": "^4.2.1"
   },
   "devDependencies": {
     "@arco-design/webpack-plugin": "^1.6.0",
@@ -71,8 +83,7 @@
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14"
+    "typescript": "^4.5.2"
   },
   "browserslist": {
     "production": [
