--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs -d ormconfig.ts",
+    "migration:generate": "f() { npm run typeorm migration:generate -p \"./src/migrations/$@\"; }; f",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:revert": "npm run typeorm migration:revert",
+    "schema:drop": "npm run typeorm schema:drop"
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^1.0.1",
@@ -47,6 +53,7 @@
     "mysql2": "^2.3.3",
     "nest-winston": "^1.8.0",
     "nodemailer": "^6.9.1",
+    "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
