chore: 将 typeorm 降级至0.3.11，完善 git action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,6 @@ jobs:
           cd /home/ubuntu/devlink/app/devlink
           git pull
           cd server
-          npm ci
+          npm install
           npm run build
-          pm2 restart devlink
+          pm2 start devlink
