--- a/server/package.json
+++ b/server/package.json
@@ -61,8 +61,7 @@
     "request-ip": "^3.3.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0",
-    "transports": "link:winston/lib/winston/transports",
-    "typeorm": "^0.3.12",
+    "typeorm": "0.3.11",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
