--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -26,3 +26,6 @@ services:
     restart: always
     ports:
       - 6379:6379
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
