--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 test.*
-*/.env.development
-*/.env.production
-*/.env
+.env.development
+.env.production
+.env
