fix: 物料/用户相关接口完善

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       MYSQL_ROOT_PASSWORD: bowling
     ports:
       - 127.0.0.1:3306:3306
+    volumes:
+    - ./mysql-data:/var/lib/mysql
 
   redis:
     image: redis
