--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.1",
     "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.9",
@@ -76,7 +77,14 @@
     "@types/jest": "28.1.8",
     "@types/node": "^16.18.12",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "28.1.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "28.0.8",
@@ -102,5 +110,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,ts,tsx,md}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
