--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
+    "qiniu": "^7.8.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rimraf": "^3.0.2",
