--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "testEnvironment": "node"
   },
   "lint-staged": {
-    "*.{js,json,css,scss,ts,tsx,md}": [
+    "*.{js,json,css,scss,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
