chore: add proxy

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ REDIS_RECONNECT=
 OPEN_PROXY=
 OPENAI_API_KEY=
 
+# proxy OPEN_PROXY 需要是 openai 允许的地区，且应该ip保持稳定，而 PROXY_URL 只要能代理就行
+PROXY_URL=
+
 # email
 user=
 pass=
@@ -43,4 +46,4 @@ BUCKET_NAME=
 
 # github
 GITHUB_CLIENT_ID=
-GITHUB_SECRET=                                       
+GITHUB_SECRET=
