--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,22 +11,29 @@ jobs:
 
     steps:
     - name: Checkout
+      # 获取代码
       uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: 16
 
-    - name: Deploy to your server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /home/ubuntu/app/devlink/devlink-server
-          git pull
-          pnpm install --frozen-lockfile
-          npm run build
-          pm2 restart ecosystem.config.js
+    - name: install dependencies
+      run: npm install -g pnpm && pnpm install
+
+    - name: build
+      run: pnpm run build
+
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@main
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          ARGS: "-rlgoDzvc -i --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.SERVER_HOST }}
+          REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
+          EXCLUDE: "/dist/, /node_modules/"
+          SCRIPT_AFTER: |
+            pm2 restart devlink-server
