--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,18 @@ jobs:
           REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
+          SCRIPT_BEFORE: |
+            whoami
+            ls -al
           SCRIPT_AFTER: |
-            pm2 restart devlink-server
+            whoami
+            ls -al
+            echo $RSYNC_STDOUT
+            
+    - name: Restart Application with PM2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: pm2 restart ecosystem.config.js
