--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,5 @@ jobs:
           SCRIPT_AFTER: |
             whoami
             ls -al
-            echo $RSYNC_STDOUT
-            
-    - name: Restart Application with PM2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: pm2 restart ecosystem.config.js
+            /home/ubuntu/.nvm/versions/node/v16.20.0/bin/pm2 restart ecosystem.config.js
+
