--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,16 @@ jobs:
     - name: Checkout
       # 获取代码
       uses: actions/checkout@v2
+      
+    - name: Setup .env
+      run: |
+        echo DB_TYPE=${{ secrets.DB_TYPE }} >> .env
+        echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+        echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
+        echo DB_DATABASE=${{ secrets.DB_DATABASE }} >> .env
+        echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+        echo DB_SYNC=${{ secrets.DB_SYNC }} >> .env
+        echo LOG_ON=${{ secrets.LOG_ON }} >> .env
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
