--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install -g pnpm && pnpm install
 
     - name: build
-      run: pnpm run build && ls
+      run: pnpm run prebuild && pnpm run build && ls
 
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@main
