--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.9",
     "@nestjs/jwt": "^10.0.2",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "0.2.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/serve-static": "^3.0.1",
