--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
               ls -al
               pwd
               echo "devlink-server restart"
-              /home/ubuntu/.nvm/versions/node/v18.16.1/bin/pm2 restart ecosystem.config.js
+              sh deploy.sh
