--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           NODE_ENV: production
 
       - name: Deploy to Server
-        uses: easingthemes/ssh-deploy@v4.1.0
+        uses: easingthemes/ssh-deploy@v4.1.5
         env:
             SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
             ARGS: "-rlgoDzvc -i --delete"
@@ -43,4 +43,5 @@ jobs:
               ls -al
               pwd
               echo "devlink-server restart"
-              /home/ubuntu/.nvm/versions/node/v18.16.1/bin/pm2 restart ecosystem.config.js
+              sleep 10
+              sh deploy.sh
