--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,15 @@ version: '3.1'
 services:
   db:
     image: mysql
-    # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
-    # (this is just an example, not intended to be a production configuration)
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE: devlink-db
-      MYSQL_ROOT_PASSWORD: bowling
+      MYSQL_DATABASE:
+      MYSQL_ROOT_PASSWORD:
     ports:
       - 127.0.0.1:3306:3306
-    # volumes:
-    # - ./mysql-data:/var/lib/mysql
+    volumes:
+    - ./mysql-data:/var/lib/mysql
 
   redis:
     image: redis
