--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE:
-      MYSQL_ROOT_PASSWORD:
+      MYSQL_DATABASE: devlink-db
+      MYSQL_ROOT_PASSWORD: bowling
     ports:
       - 127.0.0.1:3306:3306
-    volumes:
-    - ./mysql-data:/var/lib/mysql
+    # volumes:
+    # - ./mysql-data:/var/lib/mysql
 
   redis:
     image: redis
